--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -13,7 +13,7 @@ jobs:
   build:
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v2
+      - uses: actions/checkout@v3
       - name: npm install and build webpack
         run: |
           npm install
@@ -25,18 +25,29 @@ jobs:
   test:
     needs: build
     runs-on: ubuntu-latest
+    continue-on-error: ${{ matrix.experimental }}
     strategy:
+      fail-fast: true
       matrix:
+        experimental: [false]
         os: [ubuntu-latest, windows-2016]
-        node-version: [12.x, 14.x]
+        # Maintenance and Active LTS
+        node-version: [16.x, 18.x]
+        include:
+          # Maintenance
+          - node-version: 14.x
+            experimental: true
+          # Next
+          - node-version: 19.x
+            experimental: true
     steps:
-    - uses: actions/checkout@v2
+    - uses: actions/checkout@v3
     - uses: actions/download-artifact@main
       with:
         name: webpack artifacts
         path: public
     - name: Use Node.js ${{ matrix.node-version }}
-      uses: actions/setup-node@v2
+      uses: actions/setup-node@v3
       with:
         node-version: ${{ matrix.node-version }}
     - name: npm install and test
