Add package audit for NPM.

--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -53,6 +53,7 @@ jobs:
     - name: npm install and test
       run: |
         npm install
-        npm test
+        npm audit
+        npm test -- -u
       env:
         CI: true
