--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -53,7 +53,7 @@ jobs:
     - name: npm install and test
       run: |
         npm install
-        npm audit
+        npm audit || echo ""
         npm test -- -u
       env:
         CI: true
